apps/web/src/app/style.css
@font-face {
	font-family: "Inter";
	src: url("../fonts/Inter-VariableFont_opsz,wght.ttf")
		format("truetype-variations");
	font-weight: 100 900;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "Inter";
	src: url("../fonts/Inter-Italic-VariableFont_opsz,wght.ttf")
		format("truetype-variations");
	font-weight: 100 900;
	font-style: italic;
	font-display: swap;
}

@import "tailwindcss";
@import "./animations.css";

@theme {
	--font-sans: "Inter", sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
	--color-virtool: #3c8786;
}

html {
	font-size: 14px;
}

body {
	height: calc(100vh - 40px);
}

@layer base {
	h1 {
		font-size: var(--text-4xl);
	}

	h2 {
		font-size: var(--text-3xl);
		font-weight: var(--font-weight-medium);
	}

	h5 {
		font-size: var(--text-base);
		font-weight: var(--font-weight-medium);
		margin: 5px 0 10px;
	}

	p {
		margin: 0 0 10px;
	}

	a {
		cursor: pointer;
		color: var(--color-blue-700);

		&:hover,
		&:focus {
			color: var(--color-blue-900);
		}
	}
	small {
		font-size: var(--text-sm);
	}
}

.quality-chart {
	.axis path,
	.axis line {
		fill: none;
		stroke: var(--color-black);
		shape-rendering: crispEdges;
	}

	.axis-label {
		text-anchor: middle;
	}

	.graph-line {
		fill: none;
		shape-rendering: geometricPrecision;
		stroke-width: 2px;
	}

	.graph-line-blue {
		stroke: var(--color-blue-600);
	}

	.graph-line-green {
		stroke: var(--color-green-600);
	}

	.graph-line-yellow {
		stroke: var(--color-yellow-400);
	}

	.graph-line-red {
		stroke: var(--color-red-600);
	}

	.quality-area {
		stroke: none;
	}

	.quality-area-yellow {
		fill: var(--color-yellow-50);
	}

	.quality-area-green {
		fill: var(--color-green-100);
	}
}

.coverage-chart {
	path.untrustworthy-range {
		stroke: var(--color-red-600);
		stroke-width: 1;
	}

	path.depth-area {
		fill: var(--color-blue-600);
	}
}

